# healthdb

./: .envrc  .gitignore  README.md
backend/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/src/: Dockerfile  Dockerfile.x86  __init__.py  app.py  debug_server.py  entrypoint.sh  requirements.txt
backend/src/models/: __init__.py  base.py  lifts.py  macros.py  users.py  vitals.py
backend/src/routes/: __init__.py  test.py
backend/tests/: conftest.py  test_app.py  test_utils.py
backend/tools/seeder/: known_lifts.txt  lifts.tsv  seeder.py  users.tsv
frontend/healthdb/: package-lock.json
frontend/healthdb/src/: App.tsx
frontend/liftdb/: .eslinrc.js  package-lock.json  package.json
frontend/liftdb/src/: index.tsx
frontend/lifts/: tsconfig.json
